# izzy-uploader

./: .dockerignore  .gitignore  Dockerfile  READ.md  docker-compose.yml  planning.md  pyproject.toml  start_local.md  start_online.md
_Planning/: izzylease_lista_pol_import_pojazdow.csv
config/: location_map.sample.json
docker/: .env.example
src/izzy_uploader/: __init__.py  auth.py  cli.py  client.py  config.py  csv_loader.py  models.py  normalizers.py  state.py
src/izzy_uploader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/izzy_uploader/pipelines/: import_pipeline.py
src/izzy_uploader_web/: __init__.py  app.py  wsgi.py
src/izzy_uploader_web/templates/: base.html  index.html  locations.html  result.html
tests/: test_csv_loader.py  test_pipeline.py
